...
        android:id="@+id/ff_emptyFollowing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_cover"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeDownToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
