...
                            android:text="Latest Reviews"
                            android:layout_weight="1"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <Button
                            android:id="@+id/ard_add_review"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Add Review"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="10dp"
                            android:backgroundTint="@color/colorPrimary"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textAllCaps="false"
...
